--- a/theory.tex
+++ b/theory.tex
@@ -339,6 +339,7 @@ Each photonic branch also has to be plotted in a separate plot to prevent the co
 	% TODO FIGURE
 	\todo{FIGURE circular/elliptic/hyperbolic dispersion contours\\} %% note this is shown in \cite[p. 118]{shalaev2010book}
 \end{figure}
+In Fig. \ref{}
 Hyperbolic media can also be found in nature, in narrow range like near sapphire LO phonon, %cite Agranovich
 %}}}
 \paragraph{Index of refraction, and its applicability}  % TODO%{{{
