added references to meep, mpb, harminv and matplotlib

--- a/fdphd.bib
+++ b/fdphd.bib
@@ -1278,10 +1278,31 @@ lts.fzu.cz/pdf/d-js.pdf
   year={2004},
   publisher={LAURIN}
 }
-
+@article{hunter2007,
+  Author    = {Hunter, J. D.},
+  Title     = {Matplotlib: A 2D graphics environment},
+  Journal   = {Computing In Science \& Engineering},
+  Volume    = {9},
+  Number    = {3},
+  Pages     = {90--95},
+  publisher = {IEEE COMPUTER SOC},
+  year      = 2007
+}
 /*}}}*/
 
 % -- Filter diagonalisation (todo) --/*{{{*/
+@article{mandelshtam1997harmonic,
+  title={Harmonic inversion of time signals and its applications},
+  author={Mandelshtam, Vladimir A and Taylor, Howard S},
+  journal={The Journal of chemical physics},
+  volume={107},
+  number={17},
+  pages={6756--6769},
+  year={1997},
+  publisher={AIP Publishing}
+}
+
+
 % Chen 2000 FDMmaster
 % Chen 2000 FDM PhDThesisProposal
 % KathleenFDM
