--- a/conclusion.tex
+++ b/conclusion.tex
@@ -61,3 +61,4 @@ Some of the numerical simulations are also planned to be tested on the experimen
 
 This work was supported by the Czech Science Foundation under Grant No. 14-25639S.
 
+\mdf{Most of the plots were made using the Matplotlib library \cite{hunter2007}, FDTD computations were based on MEEP \cite{oskooi2010meep} and PWEM computations used the MBP program \cite{johnson2001mpb}. Harmonic inversion was used based on the FDM algorithm \cite{mandelshtam1997harmonic}}
